--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ pythonnet = "^3.0.1"
 nicegui = "^1.2.10"
 sqlalchemy = "^2.0.11"
 alembic = "^1.10.4"
+authlib = "^1.2.0"
+httpx = "^0.24.0"
+twitchapi = "^3.10.0"
+python-jose = "^3.3.0"
 
 
 [build-system]
