--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ httpx = "^0.24.0"
 twitchapi = "^3.10.0"
 python-jose = "^3.3.0"
 itsdangerous = "^2.1.2"
+psycopg2 = "^2.9.6"
+python-dotenv = "^1.0.0"
+pandas = "^2.0.1"
 
 
 [build-system]
@@ -27,4 +30,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 alup = "alembic upgrade head"
-mig  = "alembic revision --autogenerate -m "
+mig = "alembic revision --autogenerate -m "
